--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .Rhistory
 .RData
 .Ruserdata
+.DS_Store
 
 /.quarto/
 
@@ -9,7 +10,7 @@
 *.html
 *.pptx
 *.xlsx
-
+*.pdf
 
 /Declined Offers Quarto_files
 /Declined-Offers-Quarto_files
